# dfs_prophecy

./: README.md  pyproject.toml
configs/: default.yaml
data/sample_inputs/: nfl_actuals.csv  nfl_features.csv  nfl_ownership.csv
dfs_prophecy/: cli.py  config.py
dfs_prophecy/core/: lineup_optimizer.py  pipeline.py  portfolio.py  projections.py  simulation.py
dfs_prophecy/data/: loaders.py
dfs_prophecy/utils/: randomness.py
scripts/: evaluate_projections.py  run_sample_pipeline.py
